Fix .inner gap to be for page 1

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,7 +77,7 @@ main {
     align-items: center;
 }
 
-.inner {
+.page-1 .inner {
     gap: 150px;
 }
 
